<resources>
    <string name="app_name">Android Top Repo</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="sort_asc">Star Sort ASC</string>
    <string name="sort_desc">Star Sort DESC</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="something_went_wrong_description">Please check your internet connection and try again.</string>
    <string name="try_again">Try Again</string>
    <string name="watchers_str">Watchers</string>
    <string name="issues_str">Issues</string>
    <string name="pull_request_str">Pull Request</string>
    <string name="forks_str">Forks</string>
    <string name="default_branch_str">Default Branch</string>
    <string name="star_icon_placeholder">star icon placeholder</string>
    <string name="updated_at_str">Last Updated</string>
    <string name="repo_details">Repo Details</string>

</resources>