<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?backgroundColor"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/item_card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="@dimen/common_padding_medium"
        app:cardElevation="4dp"
        app:cardBackgroundColor="?appCardBackgroundColor"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/common_padding_medium"
            >
            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="@dimen/repo_details_profile_image_size"
                android:layout_height="@dimen/repo_details_profile_image_size"
                app:srcCompat="@drawable/ic_launcher_background"
                android:id="@+id/profile"
                android:layout_marginTop="@dimen/common_padding_small"
                android:layout_marginStart="@dimen/common_padding_small"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/ProfileRoundImageShape"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/profileName"
                android:maxLines="2"
                android:ellipsize="end"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginStart="@dimen/common_padding_medium"
                android:paddingHorizontal="@dimen/common_padding_medium"
                android:textSize="@dimen/title_text_size"
                app:layout_constraintBottom_toBottomOf="@id/profile"
                tools:text="rishabhbhatia"
                app:layout_constraintStart_toEndOf="@+id/profile"
                app:layout_constraintTop_toTopOf="@+id/profile"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/title"
                android:maxLines="2"
                android:ellipsize="end"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/top_margin"
                android:paddingHorizontal="@dimen/common_padding_small"
                android:textSize="@dimen/title_text_size"
                tools:text="rishabhbhatia/jetpack_compose"
                app:layout_constraintStart_toStartOf="@id/profile"
                app:layout_constraintTop_toBottomOf="@id/profile"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/description"
                android:ellipsize="end"
                android:layout_marginTop="@dimen/common_padding_medium"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/black"
                android:paddingHorizontal="@dimen/common_padding_small"
                android:textSize="@dimen/primary_text_size"
                tools:text="A fully functional Android app built entirely with Kotlin and Jetpack Compose. This monorepo stores all code and assets of all projects with which we develop regels.overheid.nl"
                app:layout_constraintStart_toStartOf="@id/profile"
                app:layout_constraintTop_toBottomOf="@id/title"
                app:layout_constraintStart_toEndOf="parent"
                />
            <View
                android:layout_width="@dimen/lang_view_size"
                android:layout_height="@dimen/lang_view_size"
                android:id="@+id/langPlaceholder"
                android:background="@drawable/round_background"
                app:layout_constraintStart_toStartOf="@id/profile"
                android:layout_marginTop="@dimen/common_margin"
                app:layout_constraintTop_toBottomOf="@+id/description"
                />

            <TextView
                android:id="@+id/langName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingStart="@dimen/common_padding_small"
                android:paddingEnd="@dimen/common_margin"
                android:textColor="@color/secondary_text_color"
                android:textSize="@dimen/secondary_text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/langPlaceholder"
                app:layout_constraintTop_toTopOf="@id/langPlaceholder"
                tools:text="Kotlin" />
            <ImageView
                android:layout_width="@dimen/star_view_size"
                android:layout_height="@dimen/star_view_size"
                android:id="@+id/startPlaceHolder"
                android:background="@drawable/ic_baseline_star_border_24"
                android:layout_marginTop="@dimen/common_margin"
                android:contentDescription="@string/star_icon_placeholder"
                app:layout_constraintStart_toEndOf="@id/langName"
                app:layout_constraintTop_toBottomOf="@+id/description"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/starCount"
                android:maxLines="1"
                android:ellipsize="end"
                android:textColor="@color/secondary_text_color"
                android:paddingHorizontal="@dimen/common_padding_small"
                android:textSize="@dimen/secondary_text_size"
                tools:text="5.3k"
                app:layout_constraintStart_toEndOf="@+id/startPlaceHolder"
                app:layout_constraintTop_toTopOf="@id/startPlaceHolder"
                app:layout_constraintBottom_toBottomOf="@id/startPlaceHolder"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_card"
        android:layout_marginBottom="@dimen/common_padding_medium"
        app:cardElevation="4dp"
        android:layout_marginTop="@dimen/common_padding_small"
        app:cardBackgroundColor="?appCardBackgroundColor"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/common_padding_medium"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/issuesHeader"
                android:maxLines="1"
                android:ellipsize="end"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/black"
                android:paddingHorizontal="@dimen/common_padding_medium"
                android:textSize="@dimen/primary_text_size"
                android:text="@string/issues_str"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/issueCount"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/issueCount"
                android:maxLines="1"
                android:ellipsize="end"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/black"
                android:paddingHorizontal="@dimen/common_padding_medium"
                android:textSize="@dimen/primary_text_size"
                tools:text="242424"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/issuesHeader"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/watchHeader"
                android:maxLines="1"
                android:ellipsize="end"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/black"
                android:paddingHorizontal="@dimen/common_padding_medium"
                android:textSize="@dimen/primary_text_size"
                android:text="@string/watchers_str"
                android:layout_marginTop="@dimen/common_padding_large"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/issuesHeader"
                app:layout_constraintEnd_toStartOf="@id/watchCount"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/watchCount"
                android:maxLines="1"
                android:ellipsize="end"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/black"
                android:paddingHorizontal="@dimen/common_padding_medium"
                android:textSize="@dimen/primary_text_size"
                tools:text="242424"
                app:layout_constraintTop_toTopOf="@id/watchHeader"
                app:layout_constraintStart_toEndOf="@id/watchHeader"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/forkHeader"
                android:maxLines="1"
                android:ellipsize="end"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/black"
                android:paddingHorizontal="@dimen/common_padding_medium"
                android:textSize="@dimen/primary_text_size"
                android:text="@string/forks_str"
                android:layout_marginTop="@dimen/common_padding_large"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/watchHeader"
                app:layout_constraintEnd_toStartOf="@id/forkCount"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/forkCount"
                android:maxLines="1"
                android:ellipsize="end"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/black"
                android:paddingHorizontal="@dimen/common_padding_medium"
                android:textSize="@dimen/primary_text_size"
                tools:text="242424"
                app:layout_constraintTop_toTopOf="@id/forkHeader"
                app:layout_constraintStart_toEndOf="@id/forkHeader"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/branchHeader"
                android:maxLines="1"
                android:ellipsize="end"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/black"
                android:paddingHorizontal="@dimen/common_padding_medium"
                android:textSize="@dimen/primary_text_size"
                android:text="@string/default_branch_str"
                android:layout_marginTop="@dimen/common_padding_large"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/forkHeader"
                app:layout_constraintEnd_toStartOf="@id/branchName"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/branchName"
                android:maxLines="1"
                android:ellipsize="end"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/black"
                android:paddingHorizontal="@dimen/common_padding_medium"
                android:textSize="@dimen/primary_text_size"
                tools:text="master"
                app:layout_constraintTop_toTopOf="@id/branchHeader"
                app:layout_constraintStart_toEndOf="@id/branchHeader"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/updatedHeader"
                android:maxLines="1"
                android:ellipsize="end"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/black"
                android:paddingHorizontal="@dimen/common_padding_medium"
                android:textSize="@dimen/primary_text_size"
                android:text="@string/updated_at_str"
                android:layout_marginTop="@dimen/common_padding_large"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/branchHeader"
                app:layout_constraintEnd_toStartOf="@id/updatedAt"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/updatedAt"
                android:maxLines="1"
                android:ellipsize="end"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/black"
                android:paddingHorizontal="@dimen/common_padding_medium"
                android:textSize="@dimen/primary_text_size"
                tools:text="1 April 202"
                app:layout_constraintTop_toTopOf="@id/updatedHeader"
                app:layout_constraintStart_toEndOf="@id/updatedHeader"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>